--- a/Carrom/MainWindow.xaml
+++ b/Carrom/MainWindow.xaml
@@ -126,18 +126,37 @@
                 </Grid>
             </Grid>
             <!-- Board of the Game-->
-            <Grid x:Name="GameGrid" Visibility="Collapsed" HorizontalAlignment="Center" Height="800" VerticalAlignment="Center" Width="1500" Background="Black">
+            <Grid x:Name="GameGrid" Visibility="Visible" HorizontalAlignment="Center" Height="800" VerticalAlignment="Center" Width="1500" Background="Black">
 
-                <Image Height="750" Width="750" Source="/Carrom_Board3.jpg"/>
-                <TextBlock Text="Score : " 
-                        Margin="39,79,1301,633" FontSize="50" FontWeight="Bold" Foreground="White"/>
-                <TextBlock x:Name="Player1Score" Text="1" Margin="10,195,1160,523" FontSize="30" Foreground="White"/>
-                <TextBlock x:Name="Player2Score" Text="2" Margin="10,282,1160,425" FontSize="30" Foreground="White" RenderTransformOrigin="0.471,0.518"/>
+                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                <Button x:Name="btnBestScore1" Content="Best score of " Click="bestScoreP1" Width="150" Margin="1198,236,152,523"/>
-                <Button x:Name="btnBestScore2" Content="Best score of " Click="bestScoreP2" Width="150" Margin="1198,123,152,633"/>
+                <StackPanel Grid.Column="0" Margin="10">
 
+                    <TextBlock Text="Select Pawn" FontWeight="Bold" Margin="20,10,0,10" Foreground="White"/>
+                    <ComboBox Name="PawnComboBox" SelectionChanged="PawnComboBox_SelectionChanged"/>
 
+                    <TextBlock Text="Select Hole" FontWeight="Bold" Margin="20,10,0,10" Foreground="White"/>
+                    <ComboBox Name="HoleComboBox" SelectionChanged="HoleComboBox_SelectionChanged"/>
+
+                    <Button Content="Play Turn" Click="PlayTurnButton_Click" Margin="0,20,0,0"/>
+                </StackPanel>
+
+                <Grid Grid.Column="1">
+                    <Image Height="750" Width="750" Source="/Carrom_Board3.jpg"/>
+                    <TextBlock Text="Score : " 
+                        Margin="39,79,1086,633" FontSize="50" FontWeight="Bold" Foreground="White"/>
+                    <TextBlock x:Name="Player1Score" Text="1" Margin="10,195,1160,523" FontSize="30" Foreground="White"/>
+                    <TextBlock x:Name="Player2Score" Text="2" Margin="10,282,1160,425" FontSize="30" Foreground="White" RenderTransformOrigin="0.471,0.518"/>
+
+                    <Button x:Name="btnBestScore1" Content="Best score of " Click="bestScoreP1" Width="150" Margin="1198,236,152,523"/>
+                    <Button x:Name="btnBestScore2" Content="Best score of " Click="bestScoreP2" Width="150" Margin="1198,123,152,633"/>
+
+                    <Canvas x:Name="BoardCanvas" Width="750" Height="750" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Grid>
             </Grid>
 
         </Canvas>
