--- a/Carrom/MainWindow.xaml
+++ b/Carrom/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Carrom"
         mc:Ignorable="d"
-        Title="Carrom Game" Height="800" Width="1500">
+        Title="Carrom Game" Height="845" Width="1500">
     <Grid>
         <!-- Starter Image -->
         <Image x:Name="StarterImage" Source="/Pictures/Carrom Start Image.jpg" Stretch="UniformToFill" />
@@ -86,6 +86,13 @@
                     <Button Content="Print the list of the players" Click="listPlayers" Height="25" Width="150" Margin="661,400,689,172"/>
                     <Button Content="Create an account" Click="createPlayer" Height="25" Width="150" Margin="661,500,689,172"/>
                     <Button Content="Start the game" Click="StartGameButton_Click" Height="25" Width="150" Margin="661,603,689,172"/>
+                    <!-- Radio Buttons for Probability Selection -->
+                    <StackPanel Orientation="Vertical" Margin="769,352,570,383">
+                        <TextBlock Text="Select Probability Mode:" FontWeight="Bold" Foreground="Black" Margin="0,0,0,5"/>
+                        <RadioButton x:Name="Probability1RadioButton" Content="Probability to Score of 1" GroupName="ProbabilityGroup" IsChecked="True"/>
+                        <RadioButton x:Name="RealisticProbabilityRadioButton" Content="More Realistic Probability" GroupName="ProbabilityGroup"/>
+                    </StackPanel>
+
                 </Grid>
             </Grid>
             <Grid x:Name="ConfigGridNP" Visibility="Collapsed" HorizontalAlignment="Center" Height="800" VerticalAlignment="Center" Width="1500">
@@ -126,9 +133,9 @@
                 </Grid>
             </Grid>
             <!-- Board of the Game-->
-            <Grid x:Name="GameGrid" Visibility="Collapsed" HorizontalAlignment="Center" Height="800" VerticalAlignment="Center" Width="1500" Background="Black">
+            <Grid x:Name="GameGrid" Visibility="Collapsed" HorizontalAlignment="Center" Height="800" VerticalAlignment="Top" Width="1500" Background="Black" Canvas.Top="10">
 
-                
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="200"/>
                     <ColumnDefinition Width="*"/>
@@ -142,19 +149,24 @@
                     <TextBlock Text="Select Hole" FontWeight="Bold" Margin="20,10,0,10" Foreground="White"/>
                     <ComboBox Name="HoleComboBox" SelectionChanged="HoleComboBox_SelectionChanged"/>
 
-                    <Button Content="Play Turn" Click="PlayTurnButton_Click" Margin="0,20,0,0"/>
+                    <Button x:Name="PlayTurnButton" Content="Play Turn" Click="PlayTurnButton_Click" Margin="0,20,0,0"/>
+                    <TextBlock Text="Only for the first shot:" FontWeight="Bold" Margin="20,10,0,10" Foreground="White" Height="29" RenderTransformOrigin="0.493,1.556"/>
+                    <Button x:Name="BreakButton" Content="Break" Click="BreakButton_Click"/>
                 </StackPanel>
 
                 <Grid Grid.Column="1">
                     <Image Height="750" Width="750" Source="/Carrom_Board3.jpg"/>
                     <TextBlock Text="Score : " 
                         Margin="39,79,1086,633" FontSize="50" FontWeight="Bold" Foreground="White"/>
-                    <TextBlock x:Name="Player1Score" Text="1" Margin="10,195,1160,523" FontSize="30" Foreground="White"/>
-                    <TextBlock x:Name="Player2Score" Text="2" Margin="10,282,1160,425" FontSize="30" Foreground="White" RenderTransformOrigin="0.471,0.518"/>
+                    <TextBlock x:Name="Player1Score" Text="1" Margin="10,195,1128,523" FontSize="30" Foreground="White"/>
+                    <TextBlock x:Name="Player2Score" Text="2" Margin="10,282,1128,425" FontSize="30" Foreground="White" RenderTransformOrigin="0.471,0.518"/>
 
-                    <Button x:Name="btnBestScore1" Content="Best score of " Click="bestScoreP1" Width="150" Margin="1198,236,152,523"/>
-                    <Button x:Name="btnBestScore2" Content="Best score of " Click="bestScoreP2" Width="150" Margin="1198,123,152,633"/>
-
+                    <Button x:Name="btnBestScore1" Content="Best score of " Click="bestScoreP1" Width="150" Margin="1097,145,53,614"/>
+                    <Button x:Name="btnBestScore2" Content="Best score of " Click="bestScoreP2" Width="150" Margin="1097,62,53,694"/>
+                    <TextBlock x:Name="Player2Name" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontSize="24" FontWeight="Bold" Foreground="White"/>
+                    <TextBlock x:Name="Player1Name" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10" FontSize="24" FontWeight="Bold" Foreground="White"/>
+                    <TextBlock x:Name="Player1Color" Margin="1030,282,10,472" Foreground="White" FontSize="16"/>
+                    <TextBlock x:Name="Player2Color" Margin="1030,333,10,425" Foreground="White" FontSize="16"/>
                     <Canvas x:Name="BoardCanvas" Width="750" Height="750" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </Grid>
             </Grid>
